@@ -1,0 +1,5 @@
+tints = 
+{
+    glass_alpha = {r = 1, g = 1, b = 1, a = 0.5}
+}
+return tints
