@@ -1,5 +1,5 @@
 --all science packs
-
+local item_sounds = require("__base__.prototypes.item_sounds")
 data:extend({
 
   {
@@ -16,6 +16,9 @@ data:extend({
     name = "pm-advanced-advanced-transition-metal-science-pack",
     icon_size = 64,
     icon = "__periodic-madness__/graphics/icons/science/advanced-advanced-transition-metal-pack.png",
+    inventory_move_sound = item_sounds.science_inventory_move,
+    pick_sound = item_sounds.science_inventory_pickup,
+    drop_sound = item_sounds.science_inventory_move,
     subgroup = "science-pack",
     order = "d",
     stack_size = 200,
@@ -28,6 +31,9 @@ data:extend({
     name = "pm-post-transition-metal-science-pack",
     icon_size = 64,
     icon = "__periodic-madness__/graphics/icons/science/post-transition-metal-pack.png",
+    inventory_move_sound = item_sounds.science_inventory_move,
+    pick_sound = item_sounds.science_inventory_pickup,
+    drop_sound = item_sounds.science_inventory_move,
     subgroup = "science-pack",
     order = "f",
     stack_size = 200,
@@ -40,6 +46,9 @@ data:extend({
     name = "pm-alkali-metal-science-pack",
     icon_size = 64,
     icon = "__periodic-madness__/graphics/icons/science/alkali-metal-pack.png",
+    inventory_move_sound = item_sounds.science_inventory_move,
+    pick_sound = item_sounds.science_inventory_pickup,
+    drop_sound = item_sounds.science_inventory_move,
     subgroup = "science-pack",
     order = "g",
     stack_size = 200,
@@ -52,6 +61,9 @@ data:extend({
     name = "pm-metalloid-science-pack",
     icon_size = 64,
     icon = "__periodic-madness__/graphics/icons/science/metalloid-pack.png",
+    inventory_move_sound = item_sounds.science_inventory_move,
+    pick_sound = item_sounds.science_inventory_pickup,
+    drop_sound = item_sounds.science_inventory_move,
     subgroup = "science-pack",
     order = "h",
     stack_size = 200,
@@ -64,6 +76,9 @@ data:extend({
     name = "pm-alkaline-earth-metal-science-pack",
     icon_size = 64,
     icon = "__periodic-madness__/graphics/icons/science/alkaline-earth-metal-pack.png",
+    inventory_move_sound = item_sounds.science_inventory_move,
+    pick_sound = item_sounds.science_inventory_pickup,
+    drop_sound = item_sounds.science_inventory_move,
     subgroup = "science-pack",
     order = "i",
     stack_size = 200,
@@ -76,6 +91,9 @@ data:extend({
     name = "pm-advanced-advanced-advanced-transition-metal-science-pack",
     icon_size = 64,
     icon = "__periodic-madness__/graphics/icons/science/advanced-advanced-advanced-transition-metal-pack.png",
+    inventory_move_sound = item_sounds.science_inventory_move,
+    pick_sound = item_sounds.science_inventory_pickup,
+    drop_sound = item_sounds.science_inventory_move,
     subgroup = "science-pack",
     order = "j",
     stack_size = 200,
@@ -88,6 +106,9 @@ data:extend({
     name = "pm-experimental-research-data",
     icon_size = 64,
     icon = "__periodic-madness__/graphics/icons/science/experimental-research-data.png",
+    inventory_move_sound = item_sounds.electric_small_inventory_move,
+    pick_sound = item_sounds.electric_small_inventory_pickup,
+    drop_sound = item_sounds.electric_small_inventory_move,
     subgroup = "pm-technectium-science",
     order = "a",
     stack_size = 100,
